--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                             CONTRACT MINT : <br> TBA
                         </h2>
                         <h2 class="section-title wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
-                            NO TAX <br/> 
+                            Total supply : <br/> 100,000,000
                         </h2>
                     </div>
                 </div>
