--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     </div>
                 </div>
                 <div class="copyright-para wow animate__fadeInUp" data-wow-duration="1.6s">
-                    &copy; Copyright 2024 $Bluey | All rights reserved.
+                    &copy; Copyright 2024 $Bluey | All rights reserved. | mailto : BlueySOL@proton.me
                 </div>
             </div>
         </footer>
